--- a/slides.html
+++ b/slides.html
@@ -287,10 +287,10 @@ $(document).ready(function () {
   <a href="index.html">Lessons and exercises</a>
 </li>
 <li>
-  <a href="more-resources.html">More resources</a>
+  <a href="slides.html">Slides</a>
 </li>
 <li>
-  <a href="slides.html">Slides</a>
+  <a href="more-resources.html">More resources</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -311,13 +311,14 @@ $(document).ready(function () {
 </div>
 
 
-<div id="slide-decks" class="section level2">
-<h2>Slide Decks</h2>
+<div id="view-these-slide-decks-in-your-bowser-of-save-as-pdfs" class="section level3">
+<h3>View these slide decks in your bowser of save as PDFs</h3>
 <ul>
 <li><p><a href="https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html">Reproducible Data Analysis With R</a></p></li>
 <li><p><a href="https://mjfrigaard.github.io/data-manip-intro/Index.html">Data Manipulation with R: An introduction to the dplyr package</a></p></li>
 <li><p><a href="https://mjfrigaard.github.io/data-transformations-joins/Index.html">Data Reshaping in R: reshaping, transforming, and joining data in R</a></p></li>
 <li><p><a href="https://mjfrigaard.github.io/data-viz-intro/Index.html#1">Introduction to Data Visualization with ggplot2</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/data-viz-as-comm/Index.html">Data Visualization as Communication</a></p></li>
 </ul>
 </div>
 
