--- a/slides.html
+++ b/slides.html
@@ -311,8 +311,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="view-these-slide-decks-in-your-bowser-of-save-as-pdfs" class="section level3">
-<h3>View these slide decks in your bowser of save as PDFs</h3>
+<div id="view-these-slide-decks-in-your-bowser-or-save-as-pdfs" class="section level3">
+<h3>View these slide decks in your bowser or save as PDFs</h3>
 <ul>
 <li><p><a href="https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html">Reproducible Data Analysis With R</a></p></li>
 <li><p><a href="https://mjfrigaard.github.io/data-manip-intro/Index.html">Data Manipulation with R: An introduction to the dplyr package</a></p></li>
