--- a/gg01_data-viz-as-comm.html
+++ b/gg01_data-viz-as-comm.html
@@ -936,7 +936,7 @@ TidyApple %&gt;%
             # make these slightly larger...
             size = 0.30) + 
   lab_line_02 -&gt; gg_us_cities</code></pre>
-<p><img src="img/show-gg_us_cities-1.png" width="672" /></p>
+<p><img src="img/show-gg_us_cities-1.png" width="100%" height="100%" /></p>
 </div>
 </div>
 </div>
@@ -2141,6 +2141,14 @@ USWalkingAdj %&gt;%
 <p><img src="img/facet_geo-sol-1.png" width="100%" height="100%" /></p>
 </div>
 </div>
+</div>
+<div id="wrap-up" class="section level1" number="10">
+<h1 number="10"><span class="header-section-number">10</span> Wrap Up</h1>
+<p><strong>Original Question:</strong> <em>How has COVID changed our modes of transportation?</em></p>
+<ol style="list-style-type: decimal">
+<li><p>Which graphs do you feel are best at answering this question? Why?</p></li>
+<li><p>What other information (tables, annotations, etc.) would you include with the graphs?</p></li>
+</ol>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
